argo-rollout/rollout.yaml
apiVersion: argoproj.io/v1alpha1 # Create a rollout resource
kind: Rollout
metadata:
  name: rollouts-demo
spec:
  replicas: 1
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 600
  progressDeadlineAbort: true
  selector:
    matchLabels:
      app: rollouts-demo
  workloadRef: # Reference an existing Deployment using workloadRef field
    apiVersion: apps/v1
    kind: Deployment
    name: rollouts-demo
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService:
            name: rollouts-demo # required
          destinationRule:
            name: rollouts-demo-ds # required
            canarySubsetName: canary # required
            stableSubsetName: stable # required
      steps:
      - setWeight: 20
      - pause: {duration: 10}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
      abortScaleDownDelaySeconds: 30
