argo-rollout/destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rollouts-demo-ds
spec:
  host: rollouts-demo.main.svc.cluster.local # interpreted as sample-application.ar-ns.svc.cluster.local
  subsets:
  - name: stable
    labels:
      app: rollouts-demo
  - name: canary
    labels:
      app: rollouts-demo
